# AoC-2016-Rust

./: .gitignore  Cargo.toml  README.md  readme.md
input/23/: input2.txt
src/: main.rs
src/aoc01/: mod.rs  tests.rs
src/aoc02/: mod.rs  tests.rs
src/aoc03/: mod.rs  tests.rs
src/aoc04/: mod.rs  tests.rs
src/aoc05/: mod.rs  tests.rs
src/aoc06/: mod.rs  tests.rs
src/aoc07/: mod.rs  tests.rs
src/aoc08/: mod.rs  tests.rs
src/aoc09/: mod.rs  tests.rs
src/aoc10/: mod.rs  tests.rs
src/aoc11/: mod.rs  tests.rs
src/aoc12/: mod.rs  tests.rs
src/aoc13/: mod.rs  tests.rs
src/aoc14/: mod.rs  tests.rs
src/aoc15/: mod.rs  tests.rs
src/aoc16/: mod.rs  tests.rs
src/aoc17/: mod.rs  tests.rs
src/aoc18/: mod.rs  tests.rs
src/aoc19/: mod.rs  tests.rs
src/aoc20/: mod.rs  tests.rs
src/aoc21/: mod.rs  tests.rs
src/aoc22/: mod.rs  tests.rs
src/aoc23/: mod.rs  tests.rs
src/aoc24/: mod.rs  tests.rs
src/aoc25/: mod.rs  tests.rs
