[package]
name = "aoc2016"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
regex = "1.11.1"
rayon = "1.10.0"
num = "0.4.3"
itertools = "0.14.0"

# Habilitar símbolos de depuración para compilaciones de release
[profile.release]
debug = false
# opt-level = 3
# codegen-units = 1
# lto = "fat"
# panic = "abort"

# [build]
# rustflags = ["-C", "target-cpu=native"]
